added changes to html

--- a/home_work_9/index.html
+++ b/home_work_9/index.html
@@ -14,12 +14,10 @@
 </head>
 
 <body>
-    <div class="content">
-        <header>
+    <header>
+        <div class="container header-menu">
             <nav>
-                <div class="logo">
-                    <a href="#"><img src="images/logo.jpg" alt="logo" height="21"></a>
-                </div>
+                <a href="#" class="logo"><img src="images/logo.jpg" alt="logo" height="21"></a>
                 <div class="nav-menu">
                     <a href="#">home</a>
                     <a href="#">shop</a>
@@ -28,196 +26,206 @@
                     <a href="#">pages</a>
                     <a href="#">blog</a>
                 </div>
-                <div class="links">
+                <!-- menu -->
+                <div class="user-panel">
                     <a href="#"><img src="images/search.png" alt="search" height="18"></a>
                     <a href="#"><img src="images/favorite.png" alt="favorite" height="18"></a>
                     <a href="#"><img src="images/basket.png" alt="cart" height="18"></a>
                 </div>
             </nav>
-            <div class="header-content">
+        </div>
+        <div class="container main-top">
+            <div class="welcome">
+                <span>new trend</span>
+                <h1>collusion</h1>
+                <p>An exclusive selection of this season's trends.</p>
+                <div class="header-content-buttons">
+                    <button>discover</button>
+                    <button>shop now</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="adv container">
+            <div class="wrapper">
                 <div>
-                    <span>new trend</span>
-                    <h1>collusion</h1>
-                    <p>An exclusive selection of this season's trends.</p>
-                    <div class="header-content-buttons">
-                        <button>discover</button>
-                        <button>shop now</button>
+                    <img src="images/2.svg" alt="banner">
+                    <div>
+                        <img src="images/3.svg" alt="banner">
+                        <img src="images/4.png" alt="banner">
+                    </div>
+                </div>
+                <div class="catagory-link">
+                    <img src="images/Mask Group (2).png" alt="clothes">
+                    <button>catagory name</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="clothes-section container">
+            <div>
+                <div class="description">
+                    <h3>women's fashion</h3>
+                    <p>Shop our new arrivals from established brands</p>
+                </div>
+                <div class="items">
+                    <div class="item">
+                        <div>
+                            <img src="images/8.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/9.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/6.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/7.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>$229</div>
+                                <div>$129</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
-        <main>
-            <section class="adv">
-                <div class="wrapper">
-                    <div>
-                        <img src="images/2.svg" alt="banner">
-                        <div>
-                            <img src="images/3.svg" alt="banner">
-                            <img src="images/4.png" alt="banner">
-                        </div>
-                    </div>
-                    <div class="catagory-link">
-                        <button class="catagory-name">catagory name</button>
-                    </div>
-                </div>
-            </section>
-            <section class="clothes-section">
-                <div>
-                    <div class="description">
-                        <h3>women's fashion</h3>
-                        <p>Shop our new arrivals from established brands</p>
-                    </div>
-                    <div class="items">
-                        <div class="item">
-                            <div>
-                                <img src="images/8.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/9.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/6.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/7.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>$229</div>
-                                    <div>$129</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="clothes-section">
-                <div>
-                    <div class="description">
-                        <h3>men's fashion</h3>
-                        <p>Shop our new arrivals from established brands</p>
-                    </div>
-                    <div class="items">
-                        <div class="item">
-                            <div>
-                                <img src="images/10.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/11.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/12.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>229$</div>
-                                    <div>129$</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div>
-                                <img src="images/13.png" alt="woman's cloth">
-                            </div>
-                            <div>
-                                <span>igure</span>
-                                <p>green muscle fit polo shirt</p>
-                                <div class="price">
-                                    <div>$229</div>
-                                    <div>$129</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="clothes-section">
-                <div>
-                    <div class="description">
-                        <h3>avone styles</h3>
-                        <p class="capitalaze">Choose your fovorite color</p>
-                    </div>
-                    <div class="block">
-                        <div>
-                            <div id="first"><img src="images/14.png" alt="clothes"></div>
-                        </div>
-                        <div>
-                            <div><img src="images/15.png" alt="clothes"></div>
-                            <div class="border-img">
-                                <div><a href="#">show women's dress</a></div>
-                                <div id="third"><img src="images/16.png" alt="clothes"></div>
+        </section>
 
+        <section class="clothes-section container">
+            <div>
+                <div class="description">
+                    <h3>men's fashion</h3>
+                    <p>Shop our new arrivals from established brands</p>
+                </div>
+                <div class="items">
+                    <div class="item">
+                        <div>
+                            <img src="images/10.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/11.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/12.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>229$</div>
+                                <div>129$</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div>
+                            <img src="images/13.png" alt="woman's cloth">
+                        </div>
+                        <div>
+                            <span>igure</span>
+                            <p>green muscle fit polo shirt</p>
+                            <div class="price">
+                                <div>$229</div>
+                                <div>$129</div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
+
+        <section class="clothes-section container">
+            <div>
+                <div class="description">
+                    <h3>avone styles</h3>
+                    <p class="capitalaze">Choose your fovorite color</p>
+                </div>
+                <div class="block">
+                    <div>
+                        <div id="first"><img src="images/14.png" alt="clothes"></div>
+                    </div>
+                    <div>
+                        <div><img src="images/15.png" alt="clothes"></div>
+                        <div class="border-img">
+                            <div><a href="#">show women's dress</a></div>
+                            <div id="third"><img src="images/16.png" alt="clothes"></div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section>
             <div class="adv-content">
-                <div>
+                <div class="container">
                     <span>own the day</span>
-                    <h1>tachen 19</h1>
+                    <h3>tachen 19</h3>
                     <div class="adv-content-buttons">
                         <button>shop collections</button>
                     </div>
                 </div>
             </div>
-        </main>
-        <footer>
-            <div class="info">
+        </section>
+
+        <section class="about">
+            <div class="info container">
                 <div class="first-part">
                     <img src="images/logo.jpg" alt="logo">
                     <p>We earned a reputation of being good at what we do.
@@ -231,7 +239,7 @@
                         <a href="#">kawsarahmed0210@gmail.com</a>
                     </div>
                     <div class="phone-number">
-                        <div>01647470457</div>
+                        <a href="#">01647470457</a>
                     </div>
                     <div class="social-media">
                         <a href="#"><img src="images/facebook_icon.png" alt=""></a>
@@ -241,16 +249,16 @@
                     </div>
                 </div>
                 <div class="second-part">
-                    <h1>receive email updates</h1>
-                    <div>
+                    <h3>receive email updates</h3>
+                    <form>
                         <input type="email" name="email" required id="email" placeholder="Your Email Adress"
                             pattern=".+@example\.com" size="30">
                         <input type="submit" value="JOIN">
-                    </div>
+                    </form>
                     <div class="info-list-items">
                         <div class="info-list-item">
+                            <h3>shop</h3>
                             <ul>
-                                <h3>shop</h3>
                                 <li><a href="#">shop</a></li>
                                 <li><a href="#">collection</a></li>
                                 <li><a href="#">outlet</a></li>
@@ -258,8 +266,8 @@
                             </ul>
                         </div>
                         <div class="info-list-item">
+                            <h3>help</h3>
                             <ul>
-                                <h3>help</h3>
                                 <li><a href="#">FAQ</a></li>
                                 <li><a href="#">privecy policy</a></li>
                                 <li><a href="#">pearms and conditions</a></li>
@@ -267,8 +275,8 @@
                             </ul>
                         </div>
                         <div class="info-list-item">
+                            <h3>about</h3>
                             <ul>
-                                <h3>about</h3>
                                 <li><a href="#">journal</a></li>
                                 <li><a href="#">our story</a></li>
                                 <li><a href="#">contact</a></li>
@@ -278,11 +286,13 @@
                     </div>
                 </div>
             </div>
-            <div class="rights">
-                <div>Copyright © 2020 . Your company name All rights reserved</div>
-            </div>
-        </footer>
-    </div>
+        </section>
+    </main>
+    <footer>
+        <div class="rights">
+            <div>Copyright © 2020 . Your company name All rights reserved</div>
+        </div>
+    </footer>
 </body>
 
 </html>
